Setting a common SCSS file up

--- a/index.html
+++ b/index.html
@@ -1,232 +1,181 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/global.css">
 
     <title>AXA - Réinventons notre métier</title>
-  </head>
+</head>
 
-  <body id="body">
+
+<body id="body">
 
     <div id="headband">
-      <p>
-        En poursuivant votre navigation sur ce site, vous acceptez l'utilisation de Cookies pour réaliser des statistiques de visites et vous proposer du contenu ciblé.
-      </p>
-      <button type="button" name="button">
-        <img id="closing_cross" src="assets/images/icon_close.png" alt="Icone de fermeture du bandeau">
-      </button>
+
+        <p>
+            En poursuivant votre navigation sur ce site, vous acceptez l'utilisation de Cookies pour réaliser des statistiques de visites et vous proposer du contenu ciblé.
+        </p>
+        <button type="button" name="button">
+            <img id="closing_cross" src="assets/images/icon_close.png" alt="Icone de fermeture du bandeau">
+        </button>
     </div>
 
     <header>
 
-      <button id="burgerbutton" type="button" name="button">
-        <img class="" src="assets/images/burger_menu.png" alt="Menu burger">
-      </button>
+        <button id="burgerbutton" type="button" name="button">
+            <img class="" src="assets/images/burger_menu.png" alt="Menu burger">
+        </button>
 
-      <img src="assets/images/logo_axa.jpg" alt="Logo AXA">
-      <div>
-        <span class="hide_on_mobile">regards sur
-        </span>
-        <span class="year">2014</span>
-      </div>
+        <img src="assets/images/logo_axa.jpg" alt="Logo AXA">
+        <div>
+            <span>regards sur</span>
+            <span class="year">2014</span>
+        </div>
     </header>
 
     <main id="main">
 
-      <section>
-        <nav class="hide_on_mobile">
-          <ul>
-            <li>
-              protéger
-            </li>
-            <li>
-              accompagner
-            </li>
-            <li>
-              innover
-            </li>
-          </ul>
-        </nav>
+        <section>
+            <nav>
+                <ul>
+                    <li>
+                        protéger
+                    </li>
+                    <li>
+                        accompagner
+                    </li>
+                    <li>
+                        innover
+                    </li>
+                </ul>
+            </nav>
 
-          <article class="polygonbox">
+            <article class="polygonbox">
 
-            <a href="#" class="polygons polygon1">
-              <div>
-                mot du président
-                <img class="" src="assets/images/icon_plus_sm.png" alt="Icone plus">
-              </div>
-              <svg
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              viewBox="0 0 218 252"
-              >
-              <path
-              fill-rule="evenodd"
-              transform="translate(-476.5 -250.5)"
-              d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"
-              />
-              </svg>
-            </a>
+                <a href="#" class="polygons polygon1">
+                    <div>
+                        mot du président
+                        <img class="" src="assets/images/icon_plus_sm.png" alt="Icone plus">
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 218 252">
+                        <path fill-rule="evenodd" transform="translate(-476.5 -250.5)" d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
+                    </svg>
+                </a>
 
-            <a
-                href="#"
-                class="polygons polygon2"
-                >
-                <div class="">
-                  engagés pour mieux protéger
-                  <img src="assets/images/icon_plus_sm.png" alt="Icone plus">
-                </div>
-                <svg
-                class=""
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                viewBox="0 0 218 252"
-                >
-                <path
-                class=""
-                fill-rule="evenodd"
-                transform="translate(-476.5 -250.5)"
-                d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"
-                />
-              </svg>
-            </a>
+                <a href="#" class="polygons polygon2">
+                    <div class="">
+                        engagés pour mieux protéger
+                        <img src="assets/images/icon_plus_sm.png" alt="Icone plus">
+                    </div>
+                    <svg class="" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 218 252">
+                        <path fill-rule="evenodd" transform="translate(-476.5 -250.5)" d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
+                    </svg>
+                </a>
 
-            <a href="#" class="polygons polygon3">
-                <div>
-                    stratégie Ambition AXA
-                    <img class="" src="assets/images/icon_plus_sm.png" alt="Icone plus">
-                </div>
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 218 252">
-                  <path
-                  fill-rule="evenodd"
-                  transform="translate(-476.5 -250.5)"
-                  d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"
-                  />
-              </svg>
-            </a>
+                <a href="#" class="polygons polygon3">
+                    <div>
+                        stratégie Ambition AXA
+                        <img class="" src="assets/images/icon_plus_sm.png" alt="Icone plus">
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 218 252">
+                        <path fill-rule="evenodd" transform="translate(-476.5 -250.5)" d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
+                    </svg>
+                </a>
 
-            <a href="#" class="polygons polygon4" id="polygon4">
-              <div>
-                chiffres clés
-                <img src="assets/images/icon_plus_sm.png" alt="Icone plus">
-              </div>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                viewBox="0 0 218 252">
-                <path
-                  fill-rule="evenodd"
-                  transform="translate(-476.5 -250.5)"
-                  d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
-              </svg>
-            </a>
+                <a href="#" class="polygons polygon4" id="polygon4">
+                    <div>
+                        chiffres clés
+                        <img src="assets/images/icon_plus_sm.png" alt="Icone plus">
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 218 252">
+                        <path fill-rule="evenodd" transform="translate(-476.5 -250.5)" d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
+                    </svg>
+                </a>
 
 
-            <a href="#" class="polygons polygon5 hide_on_mobile_and_tablets">
-              <div>
-                histoire vécues
-                <img src="assets/images/icon_plus_sm.png" alt="Icone plus">
-              </div>
-              <svg
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              viewBox="0 0 218 252">
-              <path
-              fill-rule="evenodd"
-              transform="translate(-476.5 -250.5)"
-              d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
-              </svg>
-            </a>
+                <a href="#" class="polygons polygon5 hide_on_mobile_and_tablets">
+                    <div>
+                        histoire vécues
+                        <img src="assets/images/icon_plus_sm.png" alt="Icone plus">
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 218 252">
+                        <path fill-rule="evenodd" transform="translate(-476.5 -250.5)" d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
+                    </svg>
+                </a>
 
-            <a href="#" class="polygons polygon6 hide_on_mobile_and_tablets">
-              <div>
-                initiatives marquantes
-                <img src="assets/images/icon_plus_sm.png" alt="Icone plus">
-              </div>
-              <svg
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              viewBox="0 0 218 252">
-              <path
-              fill-rule="evenodd"
-              transform="translate(-476.5 -250.5)"
-              d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
-              </svg>
-            </a>
-            <a href="#" class="polygons polygon7 hide_on_mobile_and_tablets">
-              <div>
-                documents
-                <img src="assets/images/icon_plus_sm.png" alt="Icone plus">
-              </div>
-              <svg
-              xmlns="http://www.w3.org/2000/svg"
-              xmlns:xlink="http://www.w3.org/1999/xlink"
-              viewBox="0 0 218 252">
-              <path
-              fill-rule="evenodd"
-              transform="translate(-476.5 -250.5)"
-              d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
-            </svg>
-            </a>
+                <a href="#" class="polygons polygon6 hide_on_mobile_and_tablets">
+                    <div>
+                        initiatives marquantes
+                        <img src="assets/images/icon_plus_sm.png" alt="Icone plus">
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 218 252">
+                        <path fill-rule="evenodd" transform="translate(-476.5 -250.5)" d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
+                    </svg>
+                </a>
+                <a href="document.html" class="polygons polygon7 hide_on_mobile_and_tablets">
+                    <div>
+                        documents
+                        <img src="assets/images/icon_plus_sm.png" alt="Icone plus">
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 218 252">
+                        <path fill-rule="evenodd" transform="translate(-476.5 -250.5)" d="M693.985,439.15L585.613,502.011l-108.5-62.649L477,313.852,585.368,250.99l108.5,62.649Z"/>
+                    </svg>
+                </a>
+
+            </article>
 
 
 
-
-    </article>
-
-
-
-</section>
+        </section>
 
     </main>
 
     <footer>
-      <section id="mobilefooter" class="hide_on_desktop">
-        <img class="sharing" src="assets/images/logo_share.png" alt="Sharing Logo">
-      </section>
+        <section id="basicfooter">
+            <div class="leftpart">
+                <button type="button" name="button"  style="display:block">
+                    <img class="sharing" src="assets/images/logo_share.png" alt="Sharing Logo">
 
-      <section id="basicfooter" class="hide_on_mobile">
-      <div class="leftpart">
-        <img class="sharing" src="assets/images/logo_share.png" alt="Sharing Logo">
-        <p>
-          —
-        </p>
-        <p class="fr_language">
-          FR
-        </p>
-      </div>
-      <p class="middlepart"><a href="http://www.nyan.cat/">Mention légales ©AXA 2015</a></p>
-      <div class="rightpart">
-        <p>AXA sur les réseaux sociaux</p>
-        <div class="socialmedia_icons">
-          <a href="#" class="icons">
-            <img src="assets/images/logo_facebook.png" alt="Logo Facebook">
+                </button>
+                <p>
+                    —
+                </p>
+                <p class="fr_language">
+                    FR
+                </p>
+            </div>
+            <p class="middlepart"><a href="http://www.nyan.cat/">Mention légales ©AXA 2015</a></p>
+            <div class="rightpart">
+                <p>AXA sur les réseaux sociaux</p>
+                <div class="socialmedia_icons">
+                    <a href="#" class="icons">
+                        <img src="assets/images/logo_facebook.png" alt="Logo Facebook">
 
-          </a>
-          <a href="#" class="icons">
-            <img src="assets/images/logo_twitter.png" alt="Logo Twitter">
+                    </a>
+                    <a href="#" class="icons">
+                        <img src="assets/images/logo_twitter.png" alt="Logo Twitter">
 
-          </a>
-          <a href="#" class="icons">
-            <img src="assets/images/logo_linkedin.png" alt="Logo Linkedin">
+                    </a>
+                    <a href="#" class="icons">
+                        <img src="assets/images/logo_linkedin.png" alt="Logo Linkedin">
 
-          </a>
-          <a href="#" class="icons">
-            <img src="assets/images/logo_youtube.png" alt="Logo YouTube">
-          </a>
-          <a href="#" class="">
-            <img src="assets/images/logo_instagram.png" alt="Logo Instagram">
-          </a>
-      </div>
-    </section>
+                    </a>
+                    <a href="#" class="icons">
+                        <img src="assets/images/logo_youtube.png" alt="Logo YouTube">
+                    </a>
+                    <a href="#" class="">
+                        <img src="assets/images/logo_instagram.png" alt="Logo Instagram">
+                    </a>
+                </div>
+        </section>
 
     </footer>
 
-  <script type="text/javascript" src="assets/js/index.js"></script>
+    <script type="text/javascript" src="assets/js/index.js"></script>
 
-  </body>
+</body>
+
 </html>
