--- a/document.html
+++ b/document.html
@@ -4,8 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>Axa - Document</title>
-        <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/document.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/global.css">
     </head>
 
     <body>
