--- a/document.html
+++ b/document.html
@@ -19,7 +19,7 @@
         <div>
           <span class="show_on_desktop">regards sur
           </span>
-          <span class="year">2014</span>
+          <span class="year" id="orangeyear">2014</span>
         </div>
       </header>
 
