--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
             <img class="" src="assets/images/burger_menu.png" alt="Menu burger">
         </button>
 
-        <img src="assets/images/logo_axa.jpg" alt="Logo AXA">
+        <a href="index.html">
+            <img src="assets/images/logo_axa.jpg" alt="Logo AXA">
+        </a>
         <div>
             <span>regards sur</span>
-            <span class="year">2014</span>
+            <span class="year" id="blackyear">2014</span>
         </div>
     </header>
 
